--- a/app/src/main/res/layout/homerecycleview.xml
+++ b/app/src/main/res/layout/homerecycleview.xml
@@ -28,7 +28,7 @@
 
 
             <ImageView
-                android:id="@+id/list_item_image"
+                android:id="@+id/imageview"
                 android:layout_width="175dp"
                 android:layout_height="175dp"
                 android:layout_gravity="center"
