--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -51,11 +51,12 @@
         </Button>
     </LinearLayout>
 
-    <TextView
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/search"
         android:hint="Search here">
-    </TextView>
+    </EditText>
 
     <LinearLayout
         android:layout_width="match_parent"
