--- a/app/src/main/res/layout/homerecycleview.xml
+++ b/app/src/main/res/layout/homerecycleview.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="199dp"
+    android:background="#80000000"
     android:layout_height="246dp"
     android:orientation="horizontal">
 
@@ -46,6 +47,7 @@
                 android:background="#FFFF"
                 android:ellipsize="marquee"
                 android:maxLines="4"
+                android:text="Suncream factor 50"
                 android:textAlignment="center"
                 android:textColor="#0F0000"
                 android:textSize="10sp"
@@ -53,7 +55,7 @@
 
 
             <TextView
-                android:id="@+id/description"
+                android:id="@+id/price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -61,6 +63,7 @@
                 android:background="#FFFF"
                 android:ellipsize="marquee"
                 android:maxLines="4"
+                android:text="€11.99"
                 android:textAlignment="center"
                 android:textColor="#0F0000"
                 android:textSize="10sp"
