--- a/app/src/main/res/layout/homerecycleview.xml
+++ b/app/src/main/res/layout/homerecycleview.xml
@@ -50,8 +50,8 @@
                 android:text="Suncream factor 50"
                 android:textAlignment="center"
                 android:textColor="#0F0000"
-                android:textSize="10sp"
-                android:textStyle="italic" />
+                android:textSize="16sp"
+                android:textStyle="bold|italic" />
 
 
             <TextView
@@ -66,8 +66,8 @@
                 android:text="€11.99"
                 android:textAlignment="center"
                 android:textColor="#0F0000"
-                android:textSize="10sp"
-                android:textStyle="italic" />
+                android:textSize="18sp"
+                android:textStyle="bold|italic" />
         </LinearLayout>
 
 
