--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -96,7 +96,9 @@
             android:id="@+id/my_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="521dp"
-            android:scrollbars="vertical"></androidx.recyclerview.widget.RecyclerView>
+            android:scrollbars="vertical">
+
+        </androidx.recyclerview.widget.RecyclerView>
 
     </LinearLayout>
 
