--- a/app/src/main/res/layout/activity_view_my_cart.xml
+++ b/app/src/main/res/layout/activity_view_my_cart.xml
@@ -18,6 +18,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="565dp"
+        android:id="@+id/my_recycler_view"
         android:layout_marginTop="10dp">
 
     </androidx.recyclerview.widget.RecyclerView>
@@ -26,7 +27,6 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <TextView
-        android:id="@+id/SubTotal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Subtotal"
