--- a/app/src/main/res/layout/shoppingcartview.xml
+++ b/app/src/main/res/layout/shoppingcartview.xml
@@ -27,7 +27,9 @@
                 android:id="@+id/image"
                 android:layout_width="152dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/cucumbermask"></ImageView>
+                android:src="@drawable/cucumbermask">
+
+            </ImageView>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -50,7 +52,7 @@
 
             <TextView
                 android:id="@+id/description"
-                android:layout_width="match_parent"
+                android:layout_width="259dp"
                 android:layout_height="101dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="5dp"
@@ -61,12 +63,16 @@
                 android:textColor="#0F0000"
                 android:textSize="17sp"
                 android:textStyle="italic" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
 
             <TextView
                 android:id="@+id/price"
-                android:layout_width="match_parent"
+                android:layout_width="102dp"
                 android:layout_height="49dp"
-                android:layout_gravity="center"
                 android:layout_marginTop="5dp"
                 android:background="#FFFF"
                 android:ellipsize="marquee"
@@ -75,6 +81,20 @@
                 android:textColor="#0F0000"
                 android:textSize="17sp"
                 android:textStyle="italic" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="51dp"
+                    android:layout_marginStart="60dp"
+                    android:id="@+id/removeitem"
+                    android:text="Remove item"
+                    android:textColor="#120000"
+                    android:textSize="20sp"
+                    android:textStyle="bold">
+
+                </TextView>
+            </LinearLayout>
+
         </LinearLayout>
 
 
