--- a/app/src/main/res/layout/activity_product_view.xml
+++ b/app/src/main/res/layout/activity_product_view.xml
@@ -31,7 +31,7 @@
         android:orientation="vertical">
 
 
-        <TextView
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -39,9 +39,11 @@
             android:textColor="#120000"
             android:textSize="18sp"
             android:id="@+id/name"
-            android:textStyle="bold">
+            android:textStyle="bold"
+            android:inputType="none"
+            android:enabled="false">
 
-        </TextView>
+        </EditText>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -69,7 +71,7 @@
 
 
 
-        <TextView
+        <EditText
             android:layout_width="wrap_content"
             android:id="@+id/price"
             android:layout_height="wrap_content"
@@ -77,18 +79,62 @@
             android:text="€4.99"
             android:textColor="#190101"
             android:textSize="22sp"
-            android:textStyle="bold">
+            android:textStyle="bold"
+            android:inputType="none"
+            android:enabled="false">
 
-        </TextView>
+        </EditText>
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/Cart"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
             android:text="Add to basket">
 
         </Button>
 
+        <LinearLayout
+            android:id="@+id/stocklayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:visibility="invisible"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="48dp"
+                android:layout_height="43dp"
+                android:text="Stock Level"
+                android:textColor="#070000" />
+
+            <LinearLayout
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
+                <EditText
+                    android:id="@+id/stocklevel"
+                    android:layout_width="83dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:text="0"
+                    android:inputType="none"
+                    android:enabled="false"
+                    android:textColor="#100000" />
+
+                <Button
+                    android:id="@+id/stocklevelbtn"
+                    android:layout_width="91dp"
+                    android:layout_height="38dp"
+                    android:text="submit stock level"
+                    android:textSize="8sp">
+
+                </Button>
+            </LinearLayout>
+
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
@@ -114,13 +160,15 @@
 
         </TextView>
 
-        <TextView
+        <EditText
             android:id="@+id/description"
             android:layout_width="221dp"
+            android:layout_height="41dp"
             android:layout_marginTop="10dp"
-            android:layout_height="98dp">
+            android:inputType="none"
+            android:enabled="false">
 
-        </TextView>
+        </EditText>
 
     </LinearLayout>
     <LinearLayout
@@ -131,6 +179,7 @@
         <LinearLayout
             android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:orientation="horizontal">
 
             <TextView
@@ -156,11 +205,11 @@
         </LinearLayout>
 
         <Button
-            android:layout_width="92dp"
-            android:layout_height="wrap_content"
-            android:text="add rating"
             android:id="@+id/addrating"
+            android:layout_width="wrap_content"
+            android:layout_height="33dp"
             android:layout_marginTop="20dp"
+            android:text="add rating"
             android:textSize="12sp" />
 
     </LinearLayout>
@@ -193,7 +242,7 @@
 
     </LinearLayout>
     <LinearLayout
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -216,6 +265,11 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Update All product Details" />
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
