--- a/app/src/main/res/layout/activity_view_my_cart.xml
+++ b/app/src/main/res/layout/activity_view_my_cart.xml
@@ -17,23 +17,30 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="565dp"
+        android:layout_height="500dp"
         android:id="@+id/my_recycler_view"
         android:layout_marginTop="10dp">
 
     </androidx.recyclerview.widget.RecyclerView>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="chekout"
+        android:id="@+id/checkout">
+
+    </Button>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="169dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Discount"
+            android:text="Employee Discount"
             android:textColor="#120000"
-            android:textSize="26sp"
+            android:textSize="18sp"
             android:textStyle="bold">
 
         </TextView>
@@ -47,7 +54,7 @@
             android:layout_marginTop="20dp"
             android:text="€10.99"
             android:textColor="#120000"
-            android:textSize="26sp"
+            android:textSize="18sp"
             android:textStyle="bold">
 
         </TextView>
@@ -56,13 +63,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
+
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="169dp"
         android:layout_height="wrap_content"
-        android:text="Subtotal"
         android:layout_marginTop="20dp"
+        android:text="Subtotal"
         android:textColor="#120000"
-        android:textSize="26sp"
+        android:textSize="18sp"
         android:textStyle="bold">
 
     </TextView>
@@ -76,7 +84,7 @@
         android:layout_marginTop="20dp"
         android:text="€10.99"
         android:textColor="#120000"
-        android:textSize="26sp"
+        android:textSize="18sp"
         android:textStyle="bold">
 
     </TextView>
