--- a/app/src/main/res/layout/activity_admin_product_view.xml
+++ b/app/src/main/res/layout/activity_admin_product_view.xml
@@ -67,21 +67,36 @@
 
                 </TextView>
             </LinearLayout>
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
 
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="€"
+                android:layout_marginTop="20dp"
+                android:textColor="#040000"
+                android:textSize="22sp"
+                android:textStyle="bold" />
 
             <EditText
-                android:layout_width="wrap_content"
                 android:id="@+id/price"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@null"
-                android:text="€4.99"
+                android:text="4.99"
                 android:textColor="#190101"
                 android:textSize="22sp"
                 android:textStyle="bold">
 
             </EditText>
+</LinearLayout>
 
             <Button
                 android:layout_width="wrap_content"
@@ -90,6 +105,12 @@
                 android:text="Add to basket">
 
             </Button>
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
         </LinearLayout>
 
     </LinearLayout>
@@ -171,7 +192,7 @@
         android:orientation="horizontal"/>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/updateproduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Update  product details" />
