--- a/app/src/main/res/layout/activity_homescreenadmin.xml
+++ b/app/src/main/res/layout/activity_homescreenadmin.xml
@@ -26,7 +26,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/MyAccount"
+            android:id="@+id/Users"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
