--- a/app/src/main/res/layout/orderhistoryview.xml
+++ b/app/src/main/res/layout/orderhistoryview.xml
@@ -24,10 +24,10 @@
             android:orientation="horizontal">
 
 
-            <ListView
+            <TextView
                 android:id="@+id/products"
                 android:layout_width="234dp"
-                android:layout_height="104dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="left"
                 android:layout_marginTop="5dp"
                 android:background="#FFFF"
@@ -38,13 +38,35 @@
                 android:textSize="16sp"
                 android:textStyle="bold|italic" />
 
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom"
+    android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Total cost">
 
-        </TextView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_height="wrap_content"
+                android:textColor="#090101"
+                android:text="€"
+                android:textSize="20sp"
+                android:textStyle="bold">
+
+            </TextView>
+            <TextView
+                android:id="@+id/totalcost"
+                android:layout_width="132dp"
+                android:layout_gravity="bottom"
+                android:layout_height="wrap_content"
+                android:text="20"
+                android:textColor="#090101"
+                android:textSize="20sp"
+                android:textStyle="bold">
+
+            </TextView>
+</LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
