--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -36,7 +36,7 @@
         </Button>
 
         <Button
-            android:id="@+id/Categories"
+            android:id="@+id/addproduct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
