--- a/app/src/main/res/layout/activity_homescreenadmin.xml
+++ b/app/src/main/res/layout/activity_homescreenadmin.xml
@@ -36,11 +36,11 @@
         </Button>
 
         <Button
-            android:id="@+id/Categories"
+            android:id="@+id/addproduct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Categories"
+            android:text="add product"
             android:textSize="10sp">
 
         </Button>
