--- a/app/src/main/res/layout/activity_admin_product_view.xml
+++ b/app/src/main/res/layout/activity_admin_product_view.xml
@@ -26,12 +26,13 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="192dp"
+            android:layout_width="246dp"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
 
             <EditText
+                android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -39,78 +40,108 @@
                 android:text="Cucumber Mask"
                 android:textColor="#120000"
                 android:textSize="18sp"
-                android:id="@+id/name"
                 android:textStyle="bold">
 
             </EditText>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:text="Rating: 4/5"
                     android:textColor="#0B0101">
+
                 </TextView>
 
                 <TextView
+                    android:id="@+id/customernum"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="20dp"
-                    android:id="@+id/customernum"
                     android:text="rated by 30 customers."
                     android:textColor="#090000"
                     android:textStyle="italic">
 
                 </TextView>
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="€"
+                    android:textColor="#040000"
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:background="@null"
+                    android:text="4.99"
+                    android:textColor="#190101"
+                    android:textSize="22sp"
+                    android:textStyle="bold">
+
+                </EditText>
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/Cart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add to basket">
+
+            </Button>
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
 
-
             <TextView
-                android:id="@+id/textView2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="€"
-                android:layout_marginTop="20dp"
-                android:textColor="#040000"
-                android:textSize="22sp"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/price"
+                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:background="@null"
-                android:text="4.99"
-                android:textColor="#190101"
-                android:textSize="22sp"
+                android:text="Change stock"
+                android:textColor="#120000"
                 android:textStyle="bold">
+            </TextView>
 
-            </EditText>
+
+    <EditText
+        android:id="@+id/editstock"
+        android:layout_width="wrap_content"
+        android:layout_height="33dp"
+        android:layout_marginTop="5dp"
+        android:hint="edit stock here"
+        android:textSize="12sp">
+
+    </EditText>
 </LinearLayout>
 
             <Button
+                android:id="@+id/submitchange"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/Cart"
-                android:text="Add to basket">
+                android:text="edit stock">
 
             </Button>
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
         </LinearLayout>
 
     </LinearLayout>
@@ -139,13 +170,14 @@
                 android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
-                android:background="@null"
+                android:layout_marginTop="10dp"
 
-                android:layout_marginTop="10dp">
+                android:background="@null">
 
             </EditText>
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
